# PopSimRust

./: .gitignore  Creating a population simulator.docx  README.md  female-names.txt  main.py  pop-sim.py  pop_sim.py  pop_sim_numpy.py  save.json  tests.py  tui-test.py
DEPRECATED/pop_sim/: Cargo.toml
DEPRECATED/pop_sim_gui_threaded/: Cargo.toml
DEPRECTED/pop_sim_speed_test_py/: pop_sim_speed_test.py  pop_sim_speed_test.py.lprof  speed_test.py
pop-sim/: main.py  male-names.txt  pop-sim.py  tests.py
pop_sim_c/: popsimc.c  popsimc.cp310-win_amd64.pyd  popsimc.html  popsimc.pyx  run.py
pop_sim_gui/: Cargo.toml  patch_list.md
pop_sim_gui/src/: main.rs  sim.rs  simulation.rs
pop_sim_gui/src/simulation/: epidemic.rs
pop_sim_gui_threaded/src/: main.rs
pop_sim_py/: pop_sim.py  pop_sim_numpy.py
pop_sim_rust/pop_sim_rust/: Cargo.toml
pop_sim_rust/pop_sim_rust/src/: main.rs
pop_sim_rust/src/: main.rs
pop_sim_rust_gui/: Cargo.toml  patch_list.md
pop_sim_rust_gui/src/: main.rs  main_nonThreaded.rs  main_threaded_not_working.rs
pop_sim_speed/: pop_sim_speed_test.py.lprof  speed_test.py
world/: Cargo.toml
world/src/: main.rs
