[package]
name = "pop_sim_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
egui = "0.19.0"
eframe = "0.19.0"
# plotters = "0.3.1"
indicatif = { version = "*", features = ["rayon"] }

