[package]
name = "pop_sim_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
egui = "0.20.1"
eframe = "0.20.1"
try-catch = "0.2.2"
indicatif = { version = "*", features = ["rayon"] }
